Catch up changes on further files